--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alikonuk1/sirius",
+  "name": "@alikonuk/sirius",
   "version": "1.0.0",
   "description": "Modern, exotic, always up to date solidity smart contract library for wide use cases.",
   "files": [
