--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "src/**/*.sol"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "forge test"
   },
   "repository": {
     "type": "git",
